Revise README with updated run instructions
Updated instructions for running the project with Maven and JavaFX, including alternative commands for Windows users.